[package]
name = "jwt_cracker"
version = "0.1.1"
edition = "2024"
description = "A command-line tool for auditing weak secrets in HMAC-signed JWTs."
license = "BSD-3-Clause"

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
clap = { version = "4.5.39", features = ["derive"] }
hmac = "0.12.1"
md5 = "0.7.0"
num_cpus = "1.17.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "crack"
harness = false

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
